# _ffmpegMerge

./: CMakeLists.txt  ffmpegMerge.c  ffmpegMerge.h  main.c  mergeFunction.c  mergeFunction.h
lib/: comm.c  comm.h  process.c  process.h
